--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Meer Sagor",
   "name": "@meersagor/wavesurfer-vue",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Vue3 component for wavesurfer.js",
   "private": false,
   "type": "module",
@@ -52,6 +52,7 @@
     "wavesurfer.js": "^7.7.3"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.1",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/node": "^18.19.3",
