--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
       "require": "./dist/@meersagor-wavesurfer-vue.umd.cjs"
     }
   },
-  "types": "./dist/index.d.ts",
+  "types": "./dist/types/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
@@ -38,10 +38,7 @@
     "player"
   ],
   "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "build-only": "vite build",
+    "build": "vite build && vue-tsc --declaration --emitDeclarationOnly && mv dist/src dist/types",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
@@ -49,7 +46,7 @@
   },
   "dependencies": {
     "vue": "^3.3.11",
-    "wavesurfer.js": "^7.7.3"
+    "wavesurfer.js": "^7.7.11"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
@@ -66,7 +63,6 @@
     "prettier": "^3.0.3",
     "typescript": "~5.3.0",
     "vite": "^5.0.10",
-    "vite-plugin-dts": "^3.7.1",
     "vue-tsc": "^1.8.25"
   }
 }
