--- a/package.json
+++ b/package.json
@@ -17,18 +17,16 @@
     "url": "https://github.com/meer-sagor/wavesufer-vue/issues"
   },
   "homepage": "https://wavesurfer.xyz",
-  "main": "./dist/@meersagor-wavesurfer-vue.umd.cjs",
+  "main": "./dist/@meersagor-wavesurfer-vue.cjs",
   "module": "./dist/@meersagor-wavesurfer-vue.js",
   "exports": {
     ".": {
-      "import": {
-        "types": "./dist/types/index.d.ts",
-        "default": "./dist/@meersagor-wavesurfer-vue.js"
-      },
-      "require": "./dist/@meersagor-wavesurfer-vue.umd.cjs"
+      "types": "./dist/src/index.d.ts",
+      "import": "./dist/@meersagor-wavesurfer-vue.js",
+      "require": "./dist/@meersagor-wavesurfer-vue.cjs"
     }
   },
-  "types": "./dist/types/index.d.ts",
+  "types": "./dist/src/index.d.ts",
   "publishConfig": {
     "access": "public"
   },
@@ -41,31 +39,32 @@
     "player"
   ],
   "scripts": {
-    "build": "vite build && vue-tsc --declaration --emitDeclarationOnly && mv dist/src dist/types",
+    "build": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
     "link-pack": "(yarn --global unlink '@meersagor/wavesurfer-vue' || true) && yarn --global link"
   },
   "dependencies": {
-    "vue": "^3.3.11",
-    "wavesurfer.js": "^7.7.11"
+    "vue": "^3.5.12",
+    "wavesurfer.js": "^7.8.8"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.27.1",
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@tsconfig/node18": "^18.2.2",
-    "@types/node": "^18.19.3",
-    "@vitejs/plugin-vue": "^4.5.2",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/tsconfig": "^0.5.0",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "npm-run-all2": "^6.1.1",
-    "prettier": "^3.0.3",
-    "typescript": "~5.3.0",
-    "vite": "^5.0.10",
-    "vue-tsc": "^1.8.25"
+    "@changesets/cli": "^2.27.9",
+    "@rushstack/eslint-patch": "^1.10.4",
+    "@tsconfig/node18": "^18.2.4",
+    "@types/node": "^22.9.0",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vue/eslint-config-prettier": "^10.1.0",
+    "@vue/eslint-config-typescript": "^14.1.3",
+    "@vue/tsconfig": "^0.5.1",
+    "eslint": "^9.14.0",
+    "eslint-plugin-vue": "^9.30.0",
+    "npm-run-all2": "^7.0.1",
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.10",
+    "vite-plugin-dts": "^4.3.0",
+    "vue-tsc": "^2.1.10"
   }
 }
